-Changed orientation to portrait only -Changed output of 2-week trend and charity message

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -83,7 +83,7 @@
 			</div>
 			<div class="goodWeightContentItem">
 				<div class="goodWeightContentItemLabel">
-					<b>Charity:</b> ...Give some food-saved money to charity. Get
+					<b>Charity:</b> ...Give some saved money to charity. Get
 					content on goodness and earn the strength to divide your next meal
 					in half.
 				</div>
