Added USA, Denmark, Norway, Finland and Sweden fb group links. Made URLs lead to mobile version of facebook groups. Added facebook wanted-text

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -59,14 +59,26 @@
 	<div id="divFacebook" class="goodWeightContentHolder">
 		<div class="goodWeightContent">
 			<div class="goodWeightContentItem">
+				<div>
+					<b>Help wanted!</b> Become an <em>inspiring GoodWeight coach</em> on your country's facebook group.
+					We'll split the smartphone app sales money equally among ourselves and <em>charity</em>.
+					Get in GoodWeight shape and <em>make a difference</em>. <b>Now!</b>
+					
+					All the best wishes!
+					
+					/Ellen and Peter at GoodWeight :)
+				</div>
 				<div class="flags">
-					<a href="http://www.facebook.com/groups/347241081971588/" data-role="button" data-icon="flag-sweden">GoodWeight Sverige</a>
-					<!--ul data-role="listview"> 
-						<li><a href="#">Audi</a></li>
-						<li><a href="#">BMW</a></li>
-						<li><a href="#">Cadillac</a></li>
-						<li><a href="#">Ferrari</a></li>
-					</ul-->
+					<a href="http://m.facebook.com/home.php?sk=group_196335263796382" 
+						data-role="button" data-icon="flag-usa">GoodWeight USA <small>(beta)</small></a>
+					<a href="http://m.facebook.com/home.php?sk=group_309750699066750" 
+						data-role="button" data-icon="flag-denmark">GoodWeight Danmark <small>(beta)</small></a>
+					<a href="http://m.facebook.com/home.php?sk=group_305500102820450" 
+						data-role="button" data-icon="flag-norway">GoodWeight Norge <small>(beta)</small></a>
+					<a href="http://m.facebook.com/home.php?sk=group_308176715891365" 
+						data-role="button" data-icon="flag-finland">GoodWeight Suomi <small>(beta)</small></a>
+					<a href="http://m.facebook.com/home.php?sk=group_347241081971588" 
+						data-role="button" data-icon="flag-sweden">GoodWeight Sverige <small>(beta)</small></a>
 				</div>
 			</div>
 		</div>
