Added logos and flags

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -63,10 +63,6 @@
 					<b>Help wanted!</b> Become an <em>inspiring GoodWeight coach</em> on your country's facebook group.
 					We'll split the smartphone app sales money equally among ourselves and <em>charity</em>.
 					Get in GoodWeight shape and <em>make a difference</em>. <b>Now!</b>
-					
-					All the best wishes!
-					
-					/Ellen and Peter at GoodWeight :)
 				</div>
 				<div class="flags">
 					<a href="http://m.facebook.com/home.php?sk=group_196335263796382" 
@@ -103,7 +99,6 @@
 				<div class="goodWeightContentItemLabel" id="charityExtendedInfo"></div>
 			</div>
 		</div>
-		<div id="asteriskExplanation">* See 'Learn' above.</div>
 	</div>
 	<div id="divSlowFood" class="goodWeightContentHolder">
 		<div class="goodWeightContent">
@@ -128,5 +123,6 @@
 			</ul>
 		</div>
 	</div>
+	<div id="asteriskExplanation"></div>
 </body>
 </html>
