Temporary changed url in order to test parameter bug
more info at http://code.google.com/p/android/issues/detail?id=17535

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -65,7 +65,7 @@
 					Get in GoodWeight shape and <em>make a difference</em>. <b>Now!</b>
 				</div>
 				<div class="flags">
-					<a href="http://m.facebook.com/home.php?sk=group_196335263796382" 
+					<a href="http://www.facebook.com/peter.odeus" 
 						data-role="button" data-icon="flag-usa">GoodWeight USA <small>(beta)</small></a>
 					<a href="http://m.facebook.com/home.php?sk=group_309750699066750" 
 						data-role="button" data-icon="flag-denmark">GoodWeight Danmark <small>(beta)</small></a>
