Rearranged web content
Rearranged web content such that only index.html is exposed under www
directory. The rest of the web resources are stuffed inside the webres
directory.

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -5,32 +5,24 @@
 <meta http-equiv="Content-type" content="text/html; charset=utf-8">
 <title>GoodWeight</title>
 
-<link rel="stylesheet" href="jquery.mobile/jquery.mobile-1.0.min.css"
-	type="text/css" />
-<link rel="stylesheet" href="goodweight-style-override.css"
-	type="text/css" />
+<link rel="stylesheet" href="webres/jquery.mobile/jquery.mobile-1.0.min.css" type="text/css" />
+<link rel="stylesheet" href="webres/css/goodweight-style-override.css" type="text/css" />
 
-<link rel="stylesheet" href="mobiscroll/css/mobiscroll-1.5.2.css"
-	type="text/css" />
-<link rel="stylesheet" href="showLoading/css/showLoading.css"
-	type="text/css" />
-<link rel="stylesheet" href="progressbar/progressbar.css"
-	type="text/css" />
-<script type="text/javascript" src="jquery.mobile/jquery-1.6.4.min"></script>
-<script type="text/javascript" src="mobileInit.js"></script>
-<script type="text/javascript"
-	src="jquery.mobile/jquery.mobile-1.0.min.js"></script>
-<script type="text/javascript" src="mobiscroll/js/mobiscroll-1.5.2.js"></script>
-<script type="text/javascript" charset="utf-8" src="phonegap-1.3.0.js"></script>
-<script type="text/javascript"
-	src="showLoading/js/jquery.showLoading.min.js"></script>
-<script type="text/javascript" src="progressbar/progressbar.js"></script>
-<script type="text/javascript" src="util.js"></script>
-<script type="text/javascript" src="model.js"></script>
-<script type="text/javascript" src="logic.js"></script>
-<script type="text/javascript" src="db.js"></script>
-<script type="text/javascript" src="view.js"></script>
-<script type="text/javascript" src="sound.js"></script>
+<link rel="stylesheet" href="webres/mobiscroll/css/mobiscroll-1.5.2.css" type="text/css" />
+<link rel="stylesheet" href="webres/showLoading/css/showLoading.css" type="text/css" />
+<link rel="stylesheet" href="webres/progressbar/progressbar.css" type="text/css" />
+<script type="text/javascript" src="webres/jquery.mobile/jquery-1.6.4.min"></script>
+<script type="text/javascript" src="webres/jquery.mobile/jquery.mobile-1.0.min.js"></script>
+<script type="text/javascript" src="webres/mobiscroll/js/mobiscroll-1.5.2.js"></script>
+<script type="text/javascript" src="webres/js/phonegap-1.3.0.js"></script>
+<script type="text/javascript" src="webres/showLoading/js/jquery.showLoading.min.js"></script>
+<script type="text/javascript" src="webres/progressbar/progressbar.js"></script>
+<script type="text/javascript" src="webres/js/util.js"></script>
+<script type="text/javascript" src="webres/js/model.js"></script>
+<script type="text/javascript" src="webres/js/logic.js"></script>
+<script type="text/javascript" src="webres/js/db.js"></script>
+<script type="text/javascript" src="webres/js/view.js"></script>
+<script type="text/javascript" src="webres/js/sound.js"></script>
 </head>
 <body onorientationchange="updateOrientation();"
 	onunload="onUnLoaded();">
