--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="webres/mobiscroll/css/mobiscroll-1.5.2.css" type="text/css" />
 <link rel="stylesheet" href="webres/showLoading/css/showLoading.css" type="text/css" />
 <link rel="stylesheet" href="webres/progressbar/progressbar.css" type="text/css" />
+<script src="phonegap.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" src="webres/jquery.mobile/jquery-1.6.4.min"></script>
 <script type="text/javascript" src="webres/jquery.mobile/jquery.mobile-1.0.min.js"></script>
 <script type="text/javascript" src="webres/mobiscroll/js/mobiscroll-1.5.2.js"></script>
